worked on calendar routoes/styling

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -5,8 +5,7 @@
   <form action="/signup" method="post">
 
   <div class="row">
-    <h3 class="col s12">CALENDAR
-      or Log in</h3>
+    <h3 class="col s12">Log in or join!</h3>
     <div class="col s6">
       <input
         type="email"
