--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,6 +1,8 @@
 <main>
-  <input type="text" class="datepicker modal-overlay" placeholder="test picker">
+  {{!-- <input type="text" class="datepicker modal-overlay" placeholder="test picker"> --}}
     {{calTitle}}
+    <div id='calendar'></div>
+
 
 </main>
 <script src="/js/calendar.js"></script>
