--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -2,19 +2,19 @@
     {{#if email}}
     <h1>Thanks for joining us, {{email}}!</h1>
     {{else}}
-  <form action="/signup" method="post">
+  <form class="login-form">
 
   <div class="row">
     <h3 class="col s12">Log in or join!</h3>
     <div class="col s6">
-      <input
+      <input id="email-login"
         type="email"
         name="emailInput"
         placeholder="youremail@emailaddress.com">
-      <input
+      <input id="password-login"
         type="password"
         name="passwordInput">
-      <button class="btn" type="submit">submit</button>
+      <button id="loginBtn" class="btn" type="submit">submit</button>
     </div>
     <div class="col s6">
       <input
@@ -24,9 +24,12 @@
       <input
         type="password"
         name="passwordInput">
-      <button class="btn" type="submit">submit</button>
+      <button id="signupBtn" class="btn" type="submit">submit</button>
     </div>
   </div>
   </form>
   {{/if}}
+
+<script src="./JS/login.js"></script>
+
 </main>
