added login functionality, emails storage etc.

--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,6 +1,6 @@
 <main>
   {{!-- <input type="text" class="datepicker modal-overlay" placeholder="test picker"> --}}
-    {{calTitle}}
+    {{title}}
     <div id='calendar'></div>
 
 
