--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -5,20 +5,35 @@
 
   {{#if loggedIn}}
   <h1>welcome back, {{email}}!</h1>
+  <button id="logout" class="btn logout">Logout</button>
   {{else}}
 
   <form class="login-form">
 
     <div class="row">
-      <h3 class="col s12">Please enter email and password below.</h3>
-      <div>
-        <input id="email-login" type="email" name="emailInput" placeholder="youremail@emailaddress.com">
-        <input id="password-login" type="password" name="passwordInput">
-        <button id="loginBtn" class="btn" type="submit">Login/Sign Up</button>
+      <h3 class="col s12">User Login</h3>
+      <div class="parent">
+        <input class="input" id="email-login" type="email" name="emailInput" placeholder="youremail@emailaddress.com">
+        <input class="input" id="password-login" type="password" name="passwordInput" placeholder="password">
+        <button id="loginBtn" class="btn" type="submit">Login</button>
+        </div>
+    </div>
+  </form>
+  <br>
+  
+  <form class="signup-form">
+        <div class="row">
+      <h3 class="col s12">New? Sign up here!</h3>
+      <div class="parent">
+        <input class="input" id="email-signUp" type="email" name="emailInput" placeholder="youremail@emailaddress.com">
+        <input class="input" id="password-signUp" type="password" name="passwordInput" placeholder="password">
+        <button id="signUpBtn" class="btn" type="submit">Sign Up!</button>
       </div>
     </div>
   </form>
+      
   <script src="./JS/login.js"></script>
+  <script src="/js/logout.js"></script>
   {{/if}}
   {{/if}}
 
