--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -1,8 +1,11 @@
 <main>
   {{!-- <input type="text" class="datepicker modal-overlay" placeholder="test picker"> --}}
-    {{title}}
+    <div class="logoutButton">
+    <button id="logout" class="btn logout">Logout</button>
+    </div>
     <div id='calendar'></div>
 
 
 </main>
 <script src="/js/calendar.js"></script>
+<script src="/js/logout.js"></script>
