--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -25,15 +25,15 @@
         <div class="row">
       <h3 class="col s12">New? Sign up here!</h3>
       <div class="parent">
-        <input class="input" id="email-signUp" type="email" name="emailInput" placeholder="youremail@emailaddress.com">
-        <input class="input" id="password-signUp" type="password" name="passwordInput" placeholder="password">
+        <input class="input" id="email-signup" type="email" name="emailInput" placeholder="youremail@emailaddress.com">
+        <input class="input" id="password-signup" type="password" name="passwordInput" placeholder="password">
         <button id="signUpBtn" class="btn" type="submit">Sign Up!</button>
       </div>
     </div>
   </form>
       
   <script src="./JS/login.js"></script>
-  <script src="/js/logout.js"></script>
+  <script src="./js/logout.js"></script>
   {{/if}}
   {{/if}}
 
