populating calendar with logged in user's events

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,8 +31,8 @@ float: right;
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: relative; /* Stay in place */
+    z-index: auto; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
