--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,67 +1,70 @@
+/* global */
+
 main {
-    background-color: rgb(215, 215, 250);
+  background-color: rgb(215, 215, 250);
 }
 
 div {
-text-align: center;
-border: 10px black;
-border-radius: 5px;
+  text-align: center;
+  border: 10px black;
+  border-radius: 5px;
 }
 
+/* classes */
 .modal-overlay {
-    display: none;
+  display: none;
 }
 
 .parent {
-    padding: 20px;
-    margin: 20px;
+  padding: 20px;
+  margin: 20px;
 }
 
 .logoutButton {
-    padding: 20px;
-    margin: 40px;
-    
+  padding: 20px;
+  margin: 40px;
 }
 
 .logout {
-float: right;
+  float: right;
 }
 
 /* modal CSS */
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: relative; /* Stay in place */
-    z-index: auto; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+  display: none; /* Hidden by default */
+  position: relative; /* Stay in place */
+  z-index: auto; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+/* close button pseudo-classes */
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
