fixed file path for logout functionality

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -32,7 +32,7 @@
     </div>
   </form>
       
-  <script src="./JS/login.js"></script>
+  <script src="./js/login.js"></script>
   <script src="./js/logout.js"></script>
   {{/if}}
   {{/if}}
