rendering calendar with user's events

--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -36,5 +36,5 @@
 
 
 </main>
-<script src="/js/calendar.js"></script>
-<script src="/js/logout.js"></script>
+<script src="/JS/calendar.js"></script>
+<script src="/JS/logout.js"></script>
