--- a/views/calendar.handlebars
+++ b/views/calendar.handlebars
@@ -17,11 +17,12 @@
 
     <div class="row">
       <h3 class="col s12">Add Event</h3>
+      <h6 class="col s12">Please enter your date in YYYY-MM-DD format</h6>
       <div class="parent">
         <input class="input" id="event-name" type="name" name="event-name" placeholder="Event name here">
         <input class="input" id="event-description" type="description" name="event-description" placeholder="Describe your event">
-        <input class="input" id="event-start-time" type="startTime" name="event-start-time" placeholder="Event start time">
-        <input class="input" id="event-end-time" type="endTime" name="event-end-time" placeholder="Event end time">
+        <input class="input" id="event-start-time" type="startTime" name="event-start-time" placeholder="Event start date">
+        <input class="input" id="event-end-time" type="endTime" name="event-end-time" placeholder="Event end date">
         <button id="addToCalendar" class="btn" type="submit">Add to calendar!</button>
         </div>
     </div>
