--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,12 @@ div {
   float: right;
 }
 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: .5; /* Firefox */
+}
+
+
 /* modal CSS */
 /* The Modal (background) */
 .modal {
