--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -32,8 +32,8 @@
     </div>
   </form>
       
-  <script src="./js/login.js"></script>
-  <script src="./js/logout.js"></script>
+  <script src="/JS/login.js"></script>
+  <script src="/JS/logout.js"></script>
   {{/if}}
   {{/if}}
 
